# voxel-engine

./: .gitignore  CMakeLists.txt  TASKS.md  WINDOWS.md
shaders/: basic.frag  basic.vert  debug.frag  debug.vert  overlay.frag  sky.frag  sky.vert
src/: Camera.h  Shader.h  Types.h  main.cpp
src/render/: ChunkMesh.h  MeshBuilder.h
src/world/: BlockRegistry.h  BlockType.h  Chunk.h  Physics.h  Player.h  RayCast.h  TerrainGenerator.h  World.h
src/world/voxels/: DirtVoxel.h  GrassVoxel.h  LavaVoxel.h  RockVoxel.h  SandVoxel.h  SnowVoxel.h  Voxel.h  WaterVoxel.h
